[package]
name = "yield-closures-impl"
version = "0.1.0"
edition = "2021"
authors = ["Yuichi Nishiwaki <yuichi.nishiwaki@icloud.com>"]
description = "Implementation detail of the yield-closure crate"
license = "MIT"
repository = "https://github.com/nyuichi/yield-closures"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "fold", "extra-traits"] }
